# cookbooks

./: README.md
cpp/boilerplates/cannonical/: CMakeLists.txt  README.md
cpp/boilerplates/cannonical/include/: module_a.hpp
cpp/boilerplates/cannonical/include/project_name/: public_api.h
cpp/boilerplates/cannonical/src/: main.cpp
cpp/boilerplates/cannonical/src/module_a/: module_a.cpp  module_a.h
cpp/boilerplates/cannonical/tests/: test_module_a.cpp
cpp/boilerplates/cannonical/tests/unit_tests/: unit_test.cpp
